--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="icon" type="image/x-icon" href="https://clientmanager.apontador-assets.com/prod/base/images/favicon.ico?v=131">
+    <link rel="stylesheet" href="./{%= o.htmlWebpackPlugin.options.cssFilename %}">
 </head>
 
 <body>
