Ajustes HTML, CSS

--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Apontador</title>
 
+	<link rel="stylesheet" type="text/css" href="sprites/sprite.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 	
 </head>
 <body>
-
-
-
-		<!-- <div ng-controller="appCtrl">
-      		<p>{{greeting.text}}, world </p>
-    	</div> -->
-
 
 	<header class="header fixed background-orange">
 
@@ -148,8 +142,6 @@
 
 							<p class="msg-not-content">Não existem videos para esse estabelecimento.</p>
 						</div>
-
-						
 
 
 					</div>
