--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,15 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>Apontador</title>
+	<title>Parque do Ibirapuera - Parques - Avenida Pedro Álvares Cabral, s/n, Parque Ibirapuera, São Paulo, SP</title>
+	<link rel="icon" type="image/x-icon" href="https://clientmanager.apontador-assets.com/prod/base/images/favicon.ico"/>
 
+	<meta name="keywords" content="endereço, mapa, Parque do Ibirapuera, Avenida Pedro Álvares Cabral, s/n, Parque Ibirapuera, São Paulo, SP, Entretenimento e Lazer, Parques"/>
+	<meta name="description" content="Encontre o endereço ou o telefone de contato Parque do Ibirapuera Parque Ibirapuera em São Paulo"/>
+
+	
 	<link rel="stylesheet" type="text/css" href="sprites/sprite.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
-	
 </head>
 <body>
 
@@ -96,8 +100,6 @@
 						  <li><h2><a ng-click="tab=4" ng-class="{'active' : tab==4}" title="Mapa">Mapa</a></h2></li>
 						  <li><h2><a ng-click="tab=5" ng-class="{'active' : tab==5}" title="Vídeos">Vídeos</a></h2></li>
 						</ul>
-
-						
 
 						<div class="tab-content" ng-show="tab == 1">
 							<h3 class="title">Sobre <b>Parque do Ibirapuera</b></h3>
@@ -209,12 +211,10 @@
 						</div>
 					</article>
 
-
-
 			</section>
 
 			
-			<sidebar class="sidebar">
+			<aside class="sidebar">
 				<h3 class="title">Locais Parecidos com Este</h3>
 
 				<ul class="similar-places">
@@ -330,7 +330,7 @@
 					<span class="border-bottom-similar"></span>
 				</div>
 
-			</sidebar>
+			</aside>
 
 		</div>
 
