--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,9 @@
     <!-- build:js({.tmp,app}) scripts/app.js -->
 
     <script src="scripts/app.js"></script>
-    <script src="scripts/filters.js"></script>
+    <script src="scripts/filters/mask.js"></script>
+    <script src="scripts/filters/iframe.js"></script>
+
     <script src="scripts/directives/structure.js"></script> 
     <script src="scripts/directives/widget-carousel.js"></script> 
     <script src="scripts/directives/widget-locationsuggested.js"></script> 
