--- a/app/widgets/locationsuggested.html
+++ b/app/widgets/locationsuggested.html
@@ -7,7 +7,7 @@
         </figure>
         <div class="description">
             <h6 class="font-h4 font-weight color-link">{{location.description}}</h6>
-            <widget-reviews-stars content="location.statistics.rating"></widget-reviews-stars> 
+            <widget-stars content="location.statistics.rating"></widget-stars> 
             <p class="font-psmall">
                 <span ng-repeat="cat in location.categories">{{cat.name}}</span>
             </p>
