--- a/app/widgets/stars.html
+++ b/app/widgets/stars.html
@@ -1,5 +1,5 @@
 
-<div class="reviews-stars">
+<div class="stars">
 
     <i class="glyphicon" ng-class="{'glyphicon-star': content > 0, 'glyphicon-star-empty': content == 0}"></i>
     <i class="glyphicon" ng-class="{'glyphicon-star': content > 1, 'glyphicon-star-empty': content < 2}"></i>
