--- a/app/widgets/carousel.html
+++ b/app/widgets/carousel.html
@@ -39,7 +39,7 @@
         ng-click="content.setPrevNext(true, content.preview)"
         ng-class="{'col-sm-{{content.preview.size}}': content.preview.size}"
         ng-if="
-            content.slides.length > 1 && !content.noControl && content.visibled ||
+            content.slides.length > 1 && !content.noControl ||
             content.slides.length > 1 && content.preview
         ">
         <span class="glyphicon glyphicon-chevron-up"></span>
@@ -50,7 +50,7 @@
         ng-click="content.setPrevNext(false, content.preview)"
         ng-class="{'col-sm-{{content.preview.size}}': content.preview.size}"
         ng-if="
-            content.slides.length > 1 && !content.noControl && content.visibled ||
+            content.slides.length > 1 && !content.noControl ||
             content.slides.length > 1 && content.preview
         ">
         <span class="glyphicon glyphicon-chevron-down"></span>
