Adding Apontador routes, removing console.log

--- a/src/assets/directives/footer.html
+++ b/src/assets/directives/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div >
-      <a class="brand" href="/">
+      <a class="brand" href="#/local">
         <img src="assets/images/logo-footer.png" alt="Apontador">
       </a>
     </div>
