--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
 <body>
   <page-header></page-header>
   <div ng-view></div>
+  <div modal></div>
   <page-footer></page-footer>
 </body>
 </html>
