--- a/src/assets/directives/header.html
+++ b/src/assets/directives/header.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="container-fluid">
-        <a class="brand" href="/">
+        <a class="brand" href="#/local">
           <img src="assets/images/logo.png" alt="Apontador">
         </a>
       </div><!-- /.container-fluid -->
